# miku_music

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  pubspec.yaml  test_music_cache.db  version.json
.github/workflows/: build-windows.yml  release-please.yml
.metals/: metals.lock.db  metals.mv.db
ags/: app.ts  package-lock.json  package.json  style.scss
ags/widget/: DynamicIsland.tsx
android/: build.gradle.kts
android/app/: build.gradle.kts
backend/: Dockerfile  go.mod  go.sum
backend/config/: config.go
backend/router/: api.go
backend/utils/: oss.go
docs/: M3Music-PPT.html
integration_test/: simple_test.dart
lib/: main.dart
lib/config/: index.dart
lib/views/: index.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
macos/Flutter/: GeneratedPluginRegistrant.swift
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: audio_db.rs  audio_info.rs  hotkey.rs  metadata.rs  mod.rs  scanner.rs  simple.rs
rust/src/api/audio_db/: favorites.rs  history.rs  mod.rs  playlists.rs  songs.rs
rust/src/migrations/: init.sql
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_myapp.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_myapp.podspec
rust_builder/windows/: CMakeLists.txt
test/: widget_test.dart
test/database/: database_test.dart
test/shared/: shared_widgets_test.dart
typescript/: package.json  pnpm-lock.yaml  server.js
windows/flutter/: generated_plugin_registrant.cc  (+1 more)
(+146 files in other folders)
