[package]
name = "rust_lib_myapp"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
crossbeam-channel = "0.5.15"
flutter_rust_bridge = "=2.12.0"
jwalk = "0.8.1"
lofty = "0.24.0"
rayon = "1.12.0"
rusqlite = "0.39.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
