[package]
name = "rust_lib_myapp"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
chrono = "0.4.44"
crossbeam-channel = "0.5.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flutter_rust_bridge = "=2.12.0"
global-hotkey = "0.8.0"
jwalk = "0.8.1"
lofty = "0.24.0"
once_cell = "1.21.4"
rayon = "1.12.0"
regex = "1.12.3"
rusqlite = { version = "0.39.0", features = ["bundled"] }
uuid = {version = "1.23.1", features = ["v4"]}

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
